--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "watch": "webpack -w --config webpack.config.js"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "react": "^18.2.0",
