--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     },
     {
       "js": ["scripts/content/x.js"],
-      "matches": ["*://*.twitter.com/*"],
+      "matches": ["*://*.twitter.com/*", "*://*.x.com/*"],
       "run_at": "document_idle"
     }
   ],
